<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#035875"
    tools:context=".CheckoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:textSize="30sp"
        android:text="@string/premium_title"
        android:textAlignment="center"
        android:textColor="@color/app_color_light"
        android:layout_marginTop="70dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit1"/>
        <TextView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefict1"
            android:gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit2"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefict2"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp">
        
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit3"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefict3"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="@color/app_color_dark"
        android:background="@color/previus_cell"/>


</LinearLayout>